<resources>
    <string name="app_name">AndroidMaster</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu Resultado</string>
    <string name="recalculate">Re-Calcular</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="description_bajo_peso">Bajo peso para tu peso y altura</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estas en lo óptimo para tu peso y altura</string>

    <string name="title_sobre_peso">Sobre Peso</string>
    <string name="description_sobre_peso">Estas por encima para tu peso y altura</string>

    <string name="title_obesidad">Sobre Peso</string>
    <string name="description_obesidad">Estas muy por encima para tu peso y altura</string>


    <string name="todo_title">Hola Cesar</string>
    <string name="todo_categories">Categorias</string>
    <string name="todo_task">Tareas</string>
    <string name="todo_dialog_add_task">Escribe La Tarea</string>
    <string name="todo_make_task">Crear Tarea</string>
    <string name="todo_dialog_category_business">Negocios</string>
    <string name="todo_dialog_category_other">Otros</string>
    <string name="todo_dialog_category_personal">Personal</string>


    <string name="settings_dark_mode">Modo Oscuro</string>
    <string name="settings_sub_dark_mode">Activa el modo oscuro para un cambio visual</string>

    <string name="settings_bluetooth">Bluetooth</string>
    <string name="settings_sub_bluetooth">Activa o desactiva el Bluetooth</string>

    <string name="settings_volume">Volumen</string>
    <string name="settings_sub_volume">Aumenta o diminuye el volumen</string>

    <string name="settings_vibration">Vibración</string>
    <string name="settings_sub_vibration">Controle la Vibración del Dispositivo</string>




</resources>